--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,14 @@
 }
 
 .calc {
+  margin: auto;
   display: grid;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   grid-template-columns: repeat(4, 1fr);
-  max-width: 20rem;
+  width: 20rem;
   grid-auto-rows: 3rem;
 }
 
